// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > AiBriefing 1`] = `
<div>
  <section
    aria-live="polite"
    class="ai-brief"
  >
    <div
      aria-hidden="true"
      class="ai-brief-orb"
    >
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-spark"
      />
      <span
        class="ai-brief-spark rev"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-core"
      />
    </div>
    <div
      class="ai-brief-body"
    >
      <div
        class="ai-brief-meta"
      >
        <h2>
          Ассистент
        </h2>
        <span
          class="muted"
        >
          2
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`snapshots > AiBriefing enriched 1`] = `
<div>
  <section
    aria-live="polite"
    class="ai-brief ready"
  >
    <div
      aria-hidden="true"
      class="ai-brief-orb live"
    >
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-spark"
      />
      <span
        class="ai-brief-spark rev"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-core"
      />
    </div>
    <div
      class="ai-brief-body"
    >
      <div
        class="ai-brief-meta"
      >
        <h2>
          Ассистент
        </h2>
        <span
          class="ai-brief-status ok "
        >
          Сводка для руководителя
        </span>
        <span
          class="muted"
        >
          2
        </span>
      </div>
      <div
        class="ai-brief-summary"
      >
        <p>
          Вижу 
          <strong
            class="rec-num"
          >
            2
          </strong>
           сигнала. Первым делом: ТОО Alpha — Вернуть X1.
        </p>
        <div
          class="ai-digest-stats"
        >
          <span
            class="ai-digest-stat "
          >
            <strong>
              1
            </strong>
            Вернуть
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Подсортировать
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Переложить
          </span>
          <span
            class="ai-digest-stat is-empty"
          >
            <strong>
              0
            </strong>
            Снизить цену
          </span>
        </div>
        <div
          class="ai-brief-actions"
        >
          <button
            class="btn"
            type="button"
          >
            Открыть аналитический отчёт
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`snapshots > AiBriefing enriching 1`] = `
<div>
  <section
    aria-live="polite"
    class="ai-brief thinking enchanting"
  >
    <div
      aria-hidden="true"
      class="ai-brief-orb live"
    >
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-ring"
      />
      <span
        class="ai-brief-spark"
      />
      <span
        class="ai-brief-spark rev"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-mote"
      />
      <span
        class="ai-brief-core"
      />
    </div>
    <div
      class="ai-brief-body"
    >
      <div
        class="ai-brief-meta"
      >
        <h2>
          Ассистент
        </h2>
        <span
          class="ai-brief-status  "
        >
          Сверяю цены
          <span
            class="ai-dots"
          >
            <i />
            <i />
            <i />
          </span>
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`snapshots > AssistantPage empty 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <a
        aria-label="На главную"
        class="page-header-icon"
        href="/"
        title="На главную"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M7.29117 20.8242L2 22L3.17581 16.7088C2.42544 15.3056 2 13.7025 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C10.2975 22 8.6944 21.5746 7.29117 20.8242ZM7.58075 18.711L8.23428 19.0605C9.38248 19.6745 10.6655 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 13.3345 4.32549 14.6175 4.93949 15.7657L5.28896 16.4192L4.63416 19.3658L7.58075 18.711Z"
          />
        </svg>
      </a>
      <div>
        <h1>
          Ассистент
        </h1>
      </div>
    </div>
    <div
      class="page-header-end"
    >
      <div
        class="header-tools"
      >
        <a
          aria-current="page"
          class="assistant-launch active"
          href="/assistant"
          title="Ассистент"
        >
          <span
            aria-hidden="true"
            class="assistant-launch-orb ai-brief-orb live"
          >
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-spark"
            />
            <span
              class="ai-brief-core"
            />
          </span>
          <span
            class="assistant-launch-label"
          >
            Ассистент
          </span>
        </a>
      </div>
    </div>
  </header>
  <div
    class="assistant-layout panel"
  >
    <div
      aria-live="polite"
      class="assistant-thread"
      role="log"
    >
      <div
        class="assistant-empty-grid"
      >
        <button
          class="assistant-prompt-card"
          style="animation-delay: 0ms;"
          type="button"
        >
          <strong>
            Топ-5 артикулов
          </strong>
          <span
            class="muted"
          >
            Топ-5 продаваемых артикулов за текущий квартал
          </span>
        </button>
        <button
          class="assistant-prompt-card"
          style="animation-delay: 70ms;"
          type="button"
        >
          <strong>
            Топ по отгрузке
          </strong>
          <span
            class="muted"
          >
            Топ-5 артикулов по отгрузке 1С за текущий квартал
          </span>
        </button>
        <button
          class="assistant-prompt-card"
          style="animation-delay: 140ms;"
          type="button"
        >
          <strong>
            Топ клиентов
          </strong>
          <span
            class="muted"
          >
            Топ-5 клиентов по продажам Excel за текущий квартал
          </span>
        </button>
        <button
          class="assistant-prompt-card"
          style="animation-delay: 210ms;"
          type="button"
        >
          <strong>
            Отстают от плана
          </strong>
          <span
            class="muted"
          >
            Кто сильнее всего отстаёт от квартального плана отгрузки?
          </span>
        </button>
      </div>
      <div />
    </div>
    <form
      class="assistant-form"
    >
      <label
        class="field assistant-input"
      >
        <span
          class="sr-only"
        >
          Вопрос
        </span>
        <textarea
          placeholder="Спросите по данным за текущий квартал…"
          rows="2"
        />
      </label>
      <button
        class="btn"
        disabled=""
        type="submit"
      >
        Спросить
      </button>
    </form>
  </div>
</div>
`;

exports[`snapshots > CbrRates 1`] = `
<div>
  <div
    aria-label="Курсы ЦБ РФ"
    class="cbr-rates"
  >
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          USD
        </span>
        <span
          class="cbr-rate-change down"
        >
          −0,13%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            86,89 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 $
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 48.0,2.0 94.0,9.0"
            stroke="var(--bad)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          EUR
        </span>
        <span
          class="cbr-rate-change up"
        >
          +0,23%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            100,60 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 €
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 94.0,2.0"
            stroke="var(--ok)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
    <article
      class="cbr-rate"
    >
      <div
        class="cbr-rate-head"
      >
        <span
          class="cbr-rate-code"
        >
          KZT
        </span>
        <span
          class="cbr-rate-change down"
        >
          −0,11%
        </span>
      </div>
      <div
        class="cbr-rate-foot"
      >
        <div>
          <div
            class="cbr-rate-value"
          >
            0,1852 ₽
          </div>
          <div
            class="cbr-rate-unit"
          >
            за 1 ₸
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="cbr-spark"
          height="36"
          viewBox="0 0 96 36"
          width="96"
        >
          <polyline
            fill="none"
            points="2.0,34.0 94.0,2.0"
            stroke="var(--bad)"
            stroke-linejoin="round"
            stroke-width="1.8"
          />
        </svg>
      </div>
    </article>
  </div>
</div>
`;

exports[`snapshots > Checkbox 1`] = `
<div>
  <label
    class="ui-check is-on"
  >
    <input
      checked=""
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="ui-check-box"
    >
      <svg
        class="ui-check-mark"
        viewBox="0 0 16 16"
      >
        <path
          d="M3.2 8.2 6.4 11.4 12.8 4.4"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </span>
    <span
      class="ui-check-text"
    >
      Включено
    </span>
  </label>
</div>
`;

exports[`snapshots > DataTable empty 1`] = `
<div>
  <div>
    <div
      class="table-wrap"
      style="max-height: calc(100vh - 260px);"
    >
      <table
        class="data-table"
      >
        <colgroup>
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="sortable"
              style="min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Клиент
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
      <div
        class="empty-state"
      >
        <h3>
          Нет продаж за период
        </h3>
        <p>
          Загрузите Excel.
        </p>
        <a
          class="btn secondary"
          href="/uploads"
        >
          Загрузить продажи
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > DataTable numbers 1`] = `
<div>
  <div>
    <div
      class="table-wrap"
      style="max-height: calc(100vh - 260px);"
    >
      <table
        class="data-table"
      >
        <colgroup>
          <col />
          <col
            style="width: 80px;"
          />
          <col
            style="width: 120px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="sticky sortable"
              style="min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Клиент
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
            <th
              class="num sortable"
              style="width: 80px; min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Шт
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
            <th
              class="num sortable"
              style="width: 120px; min-width: 72px;"
            >
              <span
                class="th-label"
              >
                Сумма
                <span
                  class="sort-ind "
                >
                  ↕
                </span>
              </span>
              <span
                class="col-resizer"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="sticky"
            >
              ИП Garant.S
            </td>
            <td
              class="num"
            >
              12
            </td>
            <td
              class="num"
            >
              43098
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`snapshots > DwellHeatmap 1`] = `
<div>
  <div
    class="heatmap-wrap"
  >
    <div
      class="heatmap-legend"
    >
      <span
        class="dwell-fresh"
      >
        0–1 мес.
         · 
        0
      </span>
      <span
        class="dwell-warm"
      >
        2–3
         · 
        0
      </span>
      <span
        class="dwell-stale"
      >
        4–6
         · 
        0
      </span>
      <span
        class="dwell-dead"
      >
        7+
         · 
        1
      </span>
    </div>
    <div
      class="heatmap-scroll"
    >
      <table
        class="heatmap"
      >
        <thead>
          <tr>
            <th
              class="heatmap-corner"
            >
              Клиент
            </th>
            <th
              class="heatmap-sku"
              title="000001797 · Кольцо золото"
            >
              <span
                class="heatmap-sku-name"
              >
                Кольцо золото
              </span>
              <span
                class="heatmap-sku-code"
              >
                1797
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              class="heatmap-corner"
              title="ТОО Alpha"
            >
              ТОО Alpha
            </th>
            <td
              class="dwell-dead"
              title="ТОО Alpha · 000001797: залежалый товар 7 мес., остаток 3"
            >
              7
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`snapshots > EmptyState 1`] = `
<div>
  <div
    class="empty-state"
  >
    <h3>
      Нет продаж за период
    </h3>
    <p>
      Загрузите Excel продаж.
    </p>
    <a
      class="btn secondary"
      href="/uploads"
    >
      Загрузить продажи
    </a>
  </div>
</div>
`;

exports[`snapshots > ExcelLabel 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="btn-icon excel-icon"
    height="16"
    viewBox="0 0 32 32"
    width="16"
  >
    <path
      d="M28.781 4.405h-10.13V2.018L2 4.588v22.527l16.651 2.868v-3.538h10.13A1.16 1.16 0 0 0 30 25.349V5.5a1.16 1.16 0 0 0-1.219-1.095m.16 21.126H18.617l-.017-1.889h2.487v-2.2h-2.506l-.012-1.3h2.518v-2.2H18.55l-.012-1.3h2.549v-2.2H18.53v-1.3h2.557v-2.2H18.53v-1.3h2.557v-2.2H18.53v-2h10.411Z"
      fill="#20744a"
      fill-rule="evenodd"
    />
    <path
      d="M22.487 7.439h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323z"
      fill="#20744a"
    />
    <path
      d="m6.347 10.673 2.146-.123 1.349 3.709 1.594-3.862 2.146-.123-2.606 5.266 2.606 5.279-2.269-.153-1.532-4.024-1.533 3.871-2.085-.184 2.422-4.663z"
      fill="#fff"
      fill-rule="evenodd"
    />
  </svg>
  Excel
</div>
`;

exports[`snapshots > ExecutiveReport 1`] = `
<div>
  <div
    class="exec-report "
  >
    <section
      class="exec-lead"
    >
      <div
        class="exec-lead-kicker"
      >
        Сначала возврат
      </div>
      <p>
        Начните с возврата у ТОО Alpha.
      </p>
    </section>
    <section
      class="exec-block"
    >
      <h3>
        На этой неделе
      </h3>
      <p
        class="exec-note"
      >
        Позвоните Alpha.
      </p>
      <ol
        class="exec-playbook"
      >
        <li>
          <div>
            <strong>
              ТОО Alpha
              <span
                class="exec-tag tone-return"
              >
                Вернуть
              </span>
            </strong>
            <span>
              Вернуть X1
            </span>
            <em>
              план 
              <strong
                class="rec-num"
              >
                22%
              </strong>
               · 
              <strong
                class="rec-num"
              >
                7
              </strong>
               мес. без продаж · перекос ассортимента · ЖЦТ Вывод
            </em>
          </div>
        </li>
      </ol>
    </section>
    <section
      class="exec-avoid"
    >
      <h3>
        Что не делать
      </h3>
      <p>
        Не возите Вывод.
      </p>
    </section>
    <section
      class="exec-block"
    >
      <h3>
        Обстановка
      </h3>
      <div
        class="exec-kpis"
      >
        <div
          class="exec-kpi"
        >
          <strong>
            1
          </strong>
          <span>
            сигналов
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            1
          </strong>
          <span>
            клиентов
          </span>
        </div>
        <div
          class="exec-kpi urgent"
        >
          <strong>
            1
          </strong>
          <span>
            ниже плана
          </span>
        </div>
        <div
          class="exec-kpi urgent"
        >
          <strong>
            1
          </strong>
          <span>
            срочно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            важно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            на заметку
          </span>
        </div>
      </div>
      <div
        class="exec-actions"
      >
        <span
          class="exec-action-chip tone-return "
        >
          <strong>
            1
          </strong>
          Вернуть
        </span>
        <span
          class="exec-action-chip tone-restock is-empty"
        >
          <strong>
            0
          </strong>
          Подсортировать
        </span>
        <span
          class="exec-action-chip tone-transfer is-empty"
        >
          <strong>
            0
          </strong>
          Переложить
        </span>
        <span
          class="exec-action-chip tone-reprice is-empty"
        >
          <strong>
            0
          </strong>
          Снизить цену
        </span>
      </div>
      <div
        aria-label="Сигналы по виду изделия"
        class="exec-wear"
      >
        <span
          class="exec-wear-chip"
        >
          <strong>
            1
          </strong>
          Кольцо
        </span>
        <span
          class="exec-wear-chip is-exit"
        >
          <strong>
            1
          </strong>
          ЖЦТ Вывод
        </span>
      </div>
    </section>
    <div
      class="exec-grid"
    >
      <section
        class="exec-card tone-return "
      >
        <h3>
          Вернуть
          <span>
            1
          </span>
        </h3>
        <p
          class="exec-note"
        >
          Верните залежалое.
        </p>
        <div
          class="exec-facts"
        >
          <div
            class="exec-fact"
          >
            <span>
              Клиентов
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                1
              </strong>
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              Штук
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                8
              </strong>
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              Средний простой
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                7
              </strong>
               мес.
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              Перекос
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                1
              </strong>
            </strong>
          </div>
          <div
            class="exec-fact"
          >
            <span>
              ЖЦТ Вывод
            </span>
            <strong>
              <strong
                class="rec-num"
              >
                1
              </strong>
            </strong>
          </div>
        </div>
        <ul
          class="exec-top"
        >
          <li>
            <div>
              <strong>
                ТОО Alpha
                <span
                  class="exec-tag"
                >
                  Перекос
                </span>
              </strong>
              <span>
                Вернуть X1
              </span>
            </div>
            <em>
              <strong
                class="rec-num"
              >
                8
              </strong>
               шт. · план 
              <strong
                class="rec-num"
              >
                22%
              </strong>
            </em>
          </li>
        </ul>
      </section>
      <section
        class="exec-card tone-restock is-empty"
      >
        <h3>
          Подсортировать
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Подсортировка не требуется.
        </p>
      </section>
      <section
        class="exec-card tone-transfer is-empty"
      >
        <h3>
          Переложить
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Перекладывать нечего.
        </p>
      </section>
      <section
        class="exec-card tone-reprice is-empty"
      >
        <h3>
          Снизить цену
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Разрывов по цене отгрузки нет.
        </p>
      </section>
    </div>
    <section
      class="exec-block"
    >
      <h3>
        Клиенты в фокусе
      </h3>
      <div
        class="exec-table-wrap"
      >
        <table
          class="exec-table"
        >
          <thead>
            <tr>
              <th>
                Клиент
              </th>
              <th>
                План
              </th>
              <th>
                Сигналов
              </th>
              <th>
                Действия
              </th>
              <th>
                Главный кейс
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="is-behind"
            >
              <td>
                ТОО Alpha
              </td>
              <td>
                22.0%
              </td>
              <td>
                1
              </td>
              <td>
                Вернуть
              </td>
              <td>
                Вернуть X1
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </section>
  </div>
</div>
`;

exports[`snapshots > ExecutiveReport forging 1`] = `
<div>
  <div
    class="exec-report is-forging"
  >
    <div
      aria-hidden="true"
      class="exec-forge"
    >
      <span
        class="exec-forge-beam"
      />
      <span
        class="exec-forge-spark"
      />
      <span
        class="exec-forge-spark delay"
      />
    </div>
    <section
      class="exec-lead"
    >
      <p>
        Начните с возврата.
      </p>
    </section>
    <section
      class="exec-block"
    >
      <h3>
        Обстановка
      </h3>
      <div
        class="exec-kpis"
      >
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            сигналов
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            клиентов
          </span>
        </div>
        <div
          class="exec-kpi urgent"
        >
          <strong>
            0
          </strong>
          <span>
            срочно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            важно
          </span>
        </div>
        <div
          class="exec-kpi"
        >
          <strong>
            0
          </strong>
          <span>
            на заметку
          </span>
        </div>
      </div>
      <div
        class="exec-actions"
      >
        <span
          class="exec-action-chip tone-return is-empty"
        >
          <strong>
            0
          </strong>
          Вернуть
        </span>
        <span
          class="exec-action-chip tone-restock is-empty"
        >
          <strong>
            0
          </strong>
          Подсортировать
        </span>
        <span
          class="exec-action-chip tone-transfer is-empty"
        >
          <strong>
            0
          </strong>
          Переложить
        </span>
        <span
          class="exec-action-chip tone-reprice is-empty"
        >
          <strong>
            0
          </strong>
          Снизить цену
        </span>
      </div>
    </section>
    <div
      class="exec-grid"
    >
      <section
        class="exec-card tone-return is-empty"
      >
        <h3>
          Вернуть
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Сигналов на возврат нет.
        </p>
      </section>
      <section
        class="exec-card tone-restock is-empty"
      >
        <h3>
          Подсортировать
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Подсортировка не требуется.
        </p>
      </section>
      <section
        class="exec-card tone-transfer is-empty"
      >
        <h3>
          Переложить
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Перекладывать нечего.
        </p>
      </section>
      <section
        class="exec-card tone-reprice is-empty"
      >
        <h3>
          Снизить цену
          <span>
            0
          </span>
        </h3>
        <p
          class="muted"
        >
          Разрывов по цене отгрузки нет.
        </p>
      </section>
    </div>
    <section
      class="exec-block"
    >
      <h3>
        Клиенты в фокусе
      </h3>
      <p
        class="muted"
      >
        Клиентов в отчёте нет.
      </p>
    </section>
  </div>
</div>
`;

exports[`snapshots > FilePicker 1`] = `
<div>
  <div
    class="file-pick"
  >
    <input
      accept=".xlsx,.xls"
      type="file"
    />
    <button
      class="btn secondary sm"
      type="button"
    >
      Выбрать файл
    </button>
    <span
      class="muted"
      title="Файл не выбран"
    >
      Файл не выбран
    </span>
  </div>
</div>
`;

exports[`snapshots > HelpPage 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <a
        aria-label="На главную"
        class="page-header-icon"
        href="/"
        title="На главную"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11 15H13V17H11V15ZM13 13.3551V14H11V12.5C11 11.9477 11.4477 11.5 12 11.5C12.8284 11.5 13.5 10.8284 13.5 10C13.5 9.17157 12.8284 8.5 12 8.5C11.2723 8.5 10.6656 9.01823 10.5288 9.70577L8.56731 9.31346C8.88637 7.70919 10.302 6.5 12 6.5C13.933 6.5 15.5 8.067 15.5 10C15.5 11.5855 14.4457 12.9248 13 13.3551Z"
          />
        </svg>
      </a>
      <div>
        <h1>
          Справка
        </h1>
        <p
          class="muted"
        >
          Как работать в сервисе: цифры, экраны и роли
        </p>
      </div>
    </div>
    <div
      class="page-header-end"
    >
      <div
        class="header-tools"
      >
        <a
          class="assistant-launch"
          href="/assistant"
          title="Ассистент"
        >
          <span
            aria-hidden="true"
            class="assistant-launch-orb ai-brief-orb live"
          >
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-spark"
            />
            <span
              class="ai-brief-core"
            />
          </span>
          <span
            class="assistant-launch-label"
          >
            Ассистент
          </span>
        </a>
      </div>
    </div>
  </header>
  <div
    class="help-top"
  >
    <div
      aria-label="Разделы справки"
      class="seg-tabs"
      role="tablist"
    >
      <button
        aria-selected="true"
        class="seg-tab active"
        role="tab"
        type="button"
      >
        Старт
      </button>
      <button
        aria-selected="false"
        class="seg-tab "
        role="tab"
        type="button"
      >
        Ввод данных
      </button>
      <button
        aria-selected="false"
        class="seg-tab "
        role="tab"
        type="button"
      >
        Отчёты
      </button>
      <button
        aria-selected="false"
        class="seg-tab "
        role="tab"
        type="button"
      >
        1С
      </button>
      <button
        aria-selected="false"
        class="seg-tab "
        role="tab"
        type="button"
      >
        По ролям
      </button>
      <button
        aria-selected="false"
        class="seg-tab "
        role="tab"
        type="button"
      >
        Админу
      </button>
    </div>
    <label
      class="help-search"
    >
      <span
        class="sr-only"
      >
        Поиск по справке
      </span>
      <input
        autocomplete="off"
        placeholder="Найти в справке…"
        type="search"
        value=""
      />
    </label>
  </div>
  <div
    class="help-blocks"
  >
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <div
          class="help-card-title"
        >
          <span
            class="help-card-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              height="18"
              viewBox="0 0 24 24"
              width="18"
            >
              <path
                d="M14 21C13.4477 21 13 20.5523 13 20V12C13 11.4477 13.4477 11 14 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H14ZM4 13C3.44772 13 3 12.5523 3 12V4C3 3.44772 3.44772 3 4 3H10C10.5523 3 11 3.44772 11 4V12C11 12.5523 10.5523 13 10 13H4ZM9 11V5H5V11H9ZM4 21C3.44772 21 3 20.5523 3 20V16C3 15.4477 3.44772 15 4 15H10C10.5523 15 11 15.4477 11 16V20C11 20.5523 10.5523 21 10 21H4ZM5 19H9V17H5V19ZM15 19H19V13H15V19ZM13 4C13 3.44772 13.4477 3 14 3H20C20.5523 3 21 3.44772 21 4V8C21 8.55228 20.5523 9 20 9H14C13.4477 9 13 8.55228 13 8V4ZM15 5V7H19V5H15Z"
              />
            </svg>
          </span>
          <div>
            <h2>
              С чего начать
            </h2>
          </div>
        </div>
        <a
          class="help-link"
          href="/"
        >
          На дашборд
           →
        </a>
      </div>
      <p
        class="help-lead"
      >
        Короткий цикл для любого входа.
      </p>
      <ol
        class="help-steps"
      >
        <li>
          Войдите по email и паролю, которые выдал администратор. Если попросит сменить пароль — новый не короче 8 символов, примерно раз в 90 дней.
        </li>
        <li>
          Менеджер раз в месяц заносит продажи и остатки на экране «Ввод данных» — в сервисе или Excel.
        </li>
        <li>
          Откройте дашборд и отчёты за тот же период. Пустой экран чаще всего значит: нет данных, клиент не в акции или не ваш.
        </li>
        <li>
          Разделы сверху — подробности по каждому экрану. В шапке справки можно найти слово по всему тексту.
        </li>
      </ol>
      <div
        class="help-callout"
      >
        <div
          class="help-callout-label"
        >
          На заметку
        </div>
        <ul
          class="help-notes"
        >
          <li>
            Пароль позже можно сменить в шапке — иконка замка рядом с выходом.
          </li>
        </ul>
      </div>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <div
          class="help-card-title"
        >
          <div>
            <h2>
              Откуда цифры
            </h2>
          </div>
        </div>
      </div>
      <p
        class="help-lead"
      >
        Отгрузки и справочники подтягиваются из 1С. Продажи и остатки по магазинам менеджеры загружают сами, обычно раз в месяц.
      </p>
      <div
        class="help-callout"
      >
        <div
          class="help-callout-label"
        >
          На заметку
        </div>
        <ul
          class="help-notes"
        >
          <li>
            Из 1С после синхронизации: номенклатура, клиенты, реализации, возвраты, заказы, производство. Отсюда факт отгрузки, журнал документов и часть рекомендаций по цене.
          </li>
          <li>
            Из загрузок менеджера (в сервисе или Excel): продажи в штуках и остатки. Отсюда мотивация, оборачиваемость, теплокарта и матрица в итоговом квартальном отчёте.
          </li>
          <li>
            План на квартал вносится отдельно — вручную или Excel на экране «Квартальные отчеты». Это штуки «сколько должны отгрузить», не деньги.
          </li>
          <li>
            Поэтому у одного клиента продажи в квартальном отчёте могут быть, а факт отгрузки — ноль: Excel залили, а реализаций в 1С за квартал нет. И наоборот.
          </li>
        </ul>
      </div>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <div
          class="help-card-title"
        >
          <div>
            <h2>
              Как устроено меню
            </h2>
          </div>
        </div>
      </div>
      <ol
        class="help-steps"
      >
        <li>
          Аналитика — дашборд и отчёты: мотивация, оборачиваемость, кварталы, факт и рекомендации.
        </li>
        <li>
          1С — справочники и журнал. Документы только смотреть, создавать реализации здесь нельзя.
        </li>
        <li>
          Данные — ввод продаж и остатков. Сервис — оформление и эта справка.
        </li>
        <li>
          Ассистент, учётка и выход — справа в шапке на любом экране. Логотип и иконка раздела ведут на дашборд.
        </li>
        <li>
          Администрирование (пользователи, аудит, админка) видно только администратору.
        </li>
      </ol>
      <div
        class="help-callout"
      >
        <div
          class="help-callout-label"
        >
          На заметку
        </div>
        <ul
          class="help-notes"
        >
          <li>
            Слева меню можно свернуть: состояние запоминается, после обновления страницы не разъедется.
          </li>
          <li>
            В таблицах заголовок сортирует, край колонки тянется. Настройки колонок живут в этом браузере.
          </li>
        </ul>
      </div>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <div
          class="help-card-title"
        >
          <div>
            <h2>
              Кто что видит
            </h2>
          </div>
        </div>
      </div>
      <div
        class="help-callout"
      >
        <div
          class="help-callout-label"
        >
          На заметку
        </div>
        <ul
          class="help-notes"
        >
          <li>
            Менеджер — только свои клиенты, которых за ним закрепили.
          </li>
          <li>
            Региональный директор — клиенты своего региона, если регион указан в карточке пользователя.
          </li>
          <li>
            Аналитик и администратор видят все базы и отчёты.
          </li>
          <li>
            Участник акции помечен звёздочкой ★. Без неё клиент не попадёт в мотивацию, оборачиваемость, факт и рекомендации по акции. Если список пустой — напишите администратору.
          </li>
        </ul>
      </div>
    </section>
    <section
      class="panel help-card"
    >
      <div
        class="help-card-head"
      >
        <div
          class="help-card-title"
        >
          <span
            class="help-card-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              height="18"
              viewBox="0 0 24 24"
              width="18"
            >
              <path
                d="M12 2C17.5222 2 22 5.97778 22 10.8889C22 13.9556 19.5111 16.4444 16.4444 16.4444H14.4778C13.5556 16.4444 12.8111 17.1889 12.8111 18.1111C12.8111 18.5333 12.9778 18.9222 13.2333 19.2111C13.5 19.5111 13.6667 19.9 13.6667 20.3333C13.6667 21.2556 12.9 22 12 22C6.47778 22 2 17.5222 2 12C2 6.47778 6.47778 2 12 2ZM10.8111 18.1111C10.8111 16.0843 12.451 14.4444 14.4778 14.4444H16.4444C18.4065 14.4444 20 12.851 20 10.8889C20 7.1392 16.4677 4 12 4C7.58235 4 4 7.58235 4 12C4 16.19 7.2226 19.6285 11.324 19.9718C10.9948 19.4168 10.8111 18.7761 10.8111 18.1111ZM7.5 12C6.67157 12 6 11.3284 6 10.5C6 9.67157 6.67157 9 7.5 9C8.32843 9 9 9.67157 9 10.5C9 11.3284 8.32843 12 7.5 12ZM16.5 12C15.6716 12 15 11.3284 15 10.5C15 9.67157 15.6716 9 16.5 9C17.3284 9 18 9.67157 18 10.5C18 11.3284 17.3284 12 16.5 12ZM12 9C11.1716 9 10.5 8.32843 10.5 7.5C10.5 6.67157 11.1716 6 12 6C12.8284 6 13.5 6.67157 13.5 7.5C13.5 8.32843 12.8284 9 12 9Z"
              />
            </svg>
          </span>
          <div>
            <h2>
              Оформление
            </h2>
          </div>
        </div>
        <a
          class="help-link"
          href="/settings"
        >
          Настройки
           →
        </a>
      </div>
      <ol
        class="help-steps"
      >
        <li>
          В «Настройках» выберите схему: Изумруд, Янтарь, Индиго или Тёмная.
        </li>
        <li>
          Схема запоминается в браузере и на цифры не влияет.
        </li>
      </ol>
    </section>
  </div>
</div>
`;

exports[`snapshots > PageHeader 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <a
        aria-label="На главную"
        class="page-header-icon"
        href="/"
        title="На главную"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M14 21C13.4477 21 13 20.5523 13 20V12C13 11.4477 13.4477 11 14 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H14ZM4 13C3.44772 13 3 12.5523 3 12V4C3 3.44772 3.44772 3 4 3H10C10.5523 3 11 3.44772 11 4V12C11 12.5523 10.5523 13 10 13H4ZM9 11V5H5V11H9ZM4 21C3.44772 21 3 20.5523 3 20V16C3 15.4477 3.44772 15 4 15H10C10.5523 15 11 15.4477 11 16V20C11 20.5523 10.5523 21 10 21H4ZM5 19H9V17H5V19ZM15 19H19V13H15V19ZM13 4C13 3.44772 13.4477 3 14 3H20C20.5523 3 21 3.44772 21 4V8C21 8.55228 20.5523 9 20 9H14C13.4477 9 13 8.55228 13 8V4ZM15 5V7H19V5H15Z"
          />
        </svg>
      </a>
      <div>
        <h1>
          Дашборд
        </h1>
        <p
          class="muted"
        >
          Сводка
        </p>
      </div>
    </div>
    <div
      class="page-header-end"
    >
      <div
        class="header-tools"
      >
        <a
          class="assistant-launch"
          href="/assistant"
          title="Ассистент"
        >
          <span
            aria-hidden="true"
            class="assistant-launch-orb ai-brief-orb live"
          >
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-spark"
            />
            <span
              class="ai-brief-core"
            />
          </span>
          <span
            class="assistant-launch-label"
          >
            Ассистент
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`snapshots > Pager 1`] = `
<div>
  <div
    class="toolbar"
  >
    <button
      class="btn secondary"
      disabled=""
      type="button"
    >
      ←
    </button>
    <span
      class="pill"
    >
      1–50 из 216
    </span>
    <button
      class="btn secondary"
      type="button"
    >
      →
    </button>
  </div>
</div>
`;

exports[`snapshots > PeriodPicker 1`] = `
<div>
  <label
    class="field"
  >
    <span>
      Период
    </span>
    <div
      class="period-cal"
    >
      <button
        aria-expanded="false"
        class="period-cal-trigger"
        type="button"
      >
        <span>
          01.01.2023
           — 
          31.03.2023
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="16"
            rx="2"
            width="18"
            x="3"
            y="5"
          />
          <path
            d="M16 3v4M8 3v4M3 11h18"
          />
        </svg>
      </button>
    </div>
  </label>
</div>
`;

exports[`snapshots > QuarterlyMatrix 1`] = `
<div>
  <div
    class="qcards"
  >
    <div
      class="qcards-bar"
    >
      <input
        class="control"
        placeholder="Найти контрагента…"
        value=""
      />
      <span
        class="muted"
      >
        1
         из 
        1
      </span>
    </div>
    <details
      class="qcard"
      open=""
    >
      <summary
        class="qcard-head"
      >
        <div>
          <h3>
            ИП Garant.S
          </h3>
          <div
            class="qcard-pills"
          >
            <span
              class="pill"
            >
              Удержание
            </span>
          </div>
        </div>
        <dl
          class="qcard-kpis"
        >
          <div>
            <dt>
              План отгр.
            </dt>
            <dd>
              50
            </dd>
          </div>
          <div>
            <dt>
              Факт отгр.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              % отгр.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Отгр. пред.
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Дин. отгр.
            </dt>
            <dd
              class=""
            >
              —
            </dd>
          </div>
          <div>
            <dt>
              Продажи
            </dt>
            <dd>
              —
            </dd>
          </div>
          <div>
            <dt>
              Пред. кв.
            </dt>
            <dd>
              80
            </dd>
          </div>
          <div>
            <dt>
              Динамика
            </dt>
            <dd
              class="dyn-down"
            >
              43%
            </dd>
          </div>
          <div>
            <dt>
              План след.
            </dt>
            <dd>
              34
            </dd>
          </div>
        </dl>
      </summary>
      <div
        class="qcard-blocks"
      >
        <div
          class="qblock qblock-metal"
        >
          <h4>
            Цвет металла
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Красное 585
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  8
                </td>
                <td
                  class="num turn-ok"
                >
                  80%
                </td>
                <td
                  class="num turn-mid"
                >
                  26,7%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="qblock qblock-lts"
        >
          <h4>
            ЖЦТ
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Актив
                </td>
                <td
                  class="num"
                >
                  12
                </td>
                <td
                  class="num"
                >
                  9
                </td>
                <td
                  class="num turn-ok"
                >
                  75%
                </td>
                <td
                  class="num turn-mid"
                >
                  25%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="qblock qblock-wear"
        >
          <h4>
            Тип изделия
          </h4>
          <table>
            <thead>
              <tr>
                <th>
                  Категория
                </th>
                <th>
                  Остаток
                </th>
                <th>
                  Продажи
                </th>
                <th>
                  Об-ть
                </th>
                <th>
                  Ср. об-ть
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Кольцо
                </td>
                <td
                  class="num"
                >
                  5
                </td>
                <td
                  class="num"
                >
                  4
                </td>
                <td
                  class="num turn-ok"
                >
                  80%
                </td>
                <td
                  class="num turn-mid"
                >
                  26,7%
                </td>
              </tr>
              <tr
                class="qblock-total"
              >
                <td>
                  Итого
                </td>
                <td
                  class="num"
                >
                  10
                </td>
                <td
                  class="num"
                >
                  34
                </td>
                <td
                  class="num turn-ok"
                >
                  340%
                </td>
                <td
                  class="num turn-ok"
                >
                  113,3%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <footer
        class="qcard-foot"
      >
        <div
          class="qcard-comment"
        >
          <h4>
            Комментарий
          </h4>
          <p>
            Участвует в повышенной мотивации
          </p>
        </div>
        <div
          class="qcard-recs"
        >
          <h4>
            Рекомендации
          </h4>
          <ul>
            <li>
              Подсортировать кольца Актив Ядро в красном золоте.
            </li>
          </ul>
        </div>
      </footer>
    </details>
  </div>
</div>
`;

exports[`snapshots > QuarterlyResultsSheet 1`] = `
<div>
  <div
    class="tz-sheet-wrap"
  >
    <div
      class="tz-filters no-print"
    >
      <input
        class="control"
        placeholder="Контрагент…"
        value=""
      />
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все типы работы
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все менеджеры
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <span
        class="muted"
      >
        1
         из 
        1
      </span>
    </div>
    <div
      class="tz-pane"
      style="height: 752px;"
    >
      <div
        class="tz-scroll"
      >
        <table
          class="tz-sheet tz-sheet-flat"
        >
          <thead>
            <tr>
              <th
                class="tz-fix tz-fix-1 blk-metal"
              >
                Головной контрагент
              </th>
              <th
                class="blk-metal"
              >
                Менеджер
              </th>
              <th
                class="blk-metal"
              >
                Тип работы
              </th>
              <th
                class="blk-metal"
              >
                % типа работы
              </th>
              <th
                class="blk-lts"
              >
                План отгрузок на 3 квартал
              </th>
              <th
                class="blk-lts"
              >
                Факт отгрузок 3 квартал
              </th>
              <th
                class="blk-lts"
              >
                % выполнения
              </th>
              <th
                class="blk-lts"
              >
                Факт отгрузок 2 квартал
              </th>
              <th
                class="blk-lts"
              >
                Факт отгрузок 1 квартал
              </th>
              <th
                class="blk-lts"
              >
                Динамика отгрузок
              </th>
              <th
                class="blk-wear"
              >
                Продажи 3 кв.
              </th>
              <th
                class="blk-wear"
              >
                Продажи 2 кв.
              </th>
              <th
                class="blk-wear"
              >
                Продажи 1 кв.
              </th>
              <th
                class="blk-wear"
              >
                Динамика продаж
              </th>
              <th>
                Комментарий
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="tz-name tz-fix tz-fix-1"
              >
                ИП Garant.S
              </td>
              <td>
                Иванов
              </td>
              <td>
                Удержание
              </td>
              <td
                class="num"
              >
                0%
              </td>
              <td
                class="num"
              >
                0
              </td>
              <td
                class="num"
              >
                40
              </td>
              <td
                class="num"
              >
                0%
              </td>
              <td
                class="num"
              >
                50
              </td>
              <td
                class="num"
              >
                30
              </td>
              <td
                class="num dyn-down"
              >
                80%
              </td>
              <td
                class="num"
              >
                34
              </td>
              <td
                class="num"
              >
                80
              </td>
              <td
                class="num"
              >
                70
              </td>
              <td
                class="num dyn-down"
              >
                42,5%
              </td>
              <td
                class="tz-comment tz-comment-compact"
              >
                <div
                  class="tz-comment-row"
                >
                  <p
                    class="tz-comment-text"
                  >
                    Участвует в повышенной мотивации
                  </p>
                  <span
                    class="tz-comment-actions no-print"
                  >
                    <button
                      class="tz-text-link"
                      type="button"
                    >
                      изменить
                    </button>
                    <button
                      class="tz-text-link"
                      type="button"
                    >
                      история
                    </button>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > QuarterlyTzSheet 1`] = `
<div>
  <div
    class="tz-sheet-wrap"
  >
    <div
      class="tz-filters no-print"
    >
      <input
        class="control"
        placeholder="Контрагент…"
        value=""
      />
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все типы работы
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <div
        class="tz-filter-select"
      >
        <div
          class="ui-select"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ui-select-trigger"
            type="button"
          >
            <span>
              Все менеджеры
            </span>
            <span
              class="chev"
            >
              ▾
            </span>
          </button>
        </div>
      </div>
      <label
        class="ui-check tz-check"
        title="Клиенты без продаж Excel: есть план, комментарий или отгрузка 1С"
      >
        <input
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="ui-check-box"
        >
          <svg
            class="ui-check-mark"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.2 8.2 6.4 11.4 12.8 4.4"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </span>
        <span
          class="ui-check-text"
        >
          Показать без продаж Excel
        </span>
      </label>
      <button
        class="btn secondary sm"
        type="button"
      >
        Свернуть все
      </button>
      <span
        class="muted"
      >
        1
         из 
        1
      </span>
    </div>
    <div
      class="tz-pane"
      style="height: 752px;"
    >
      <div
        class="tz-scroll"
      >
        <table
          class="tz-sheet tz-sheet-matrix"
        >
          <colgroup>
            <col
              class="tz-matrix-col"
            />
          </colgroup>
          <thead>
            <tr>
              <th
                class="tz-matrix-fix"
              >
                Контрагент
              </th>
              <th
                rowspan="2"
              >
                Тип работы контрагента
              </th>
              <th
                rowspan="2"
              >
                % типа работ
              </th>
              <th
                rowspan="2"
              >
                План отгрузки на 3 квартал
              </th>
              <th
                class="blk-metal"
                colspan="5"
              >
                Цвет металла
              </th>
              <th
                class="blk-lts"
                colspan="5"
              >
                ЖЦТ
              </th>
              <th
                class="blk-wear"
                colspan="5"
              >
                Тип изделия
              </th>
              <th
                rowspan="2"
              >
                итого продажи 2 кв.
              </th>
              <th
                rowspan="2"
              >
                итого продажи 1 кв.
              </th>
              <th
                rowspan="2"
              >
                Динамика 3 кв. / 2 кв. (шт)
              </th>
              <th
                rowspan="2"
              >
                Комментарий
              </th>
              <th
                rowspan="2"
              >
                План работы на 4 кв (шт)
              </th>
              <th
                rowspan="2"
              >
                Рекомендации
              </th>
            </tr>
            <tr>
              <th
                aria-hidden="true"
                class="tz-matrix-fix tz-matrix-fix-2"
              />
              <th>
                категория
              </th>
              <th>
                ср остаток на квартал
              </th>
              <th>
                итого продажи 3 кв
              </th>
              <th>
                Об-ть 3 кв
              </th>
              <th>
                Ср. об-ть за 3 кв
              </th>
              <th>
                категория
              </th>
              <th>
                ср остаток на квартал
              </th>
              <th>
                итого продажи 3 кв
              </th>
              <th>
                Об-ть 3 кв
              </th>
              <th>
                Ср. об-ть за 3 кв
              </th>
              <th>
                категория
              </th>
              <th>
                ср остаток на квартал
              </th>
              <th>
                итого продажи 3 кв
              </th>
              <th>
                Об-ть 3 кв
              </th>
              <th>
                Ср. об-ть за 3 кв
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="tz-name tz-matrix-fix"
                rowspan="2"
              >
                <button
                  aria-expanded="true"
                  class="tz-fold no-print"
                  type="button"
                >
                  ▼
                </button>
                ИП Garant.S
              </td>
              <td
                rowspan="2"
              >
                Удержание
              </td>
              <td
                class="num"
                rowspan="2"
              />
              <td
                class="num"
                rowspan="2"
              >
                50
              </td>
              <td>
                Красное 585
              </td>
              <td
                class="num"
              >
                10
              </td>
              <td
                class="num"
              >
                8
              </td>
              <td
                class="num"
              >
                80%
              </td>
              <td
                class="num"
              >
                26,7%
              </td>
              <td>
                Актив
              </td>
              <td
                class="num"
              >
                12
              </td>
              <td
                class="num"
              >
                9
              </td>
              <td
                class="num"
              >
                75%
              </td>
              <td
                class="num"
              >
                25%
              </td>
              <td>
                Кольцо
              </td>
              <td
                class="num"
              >
                5
              </td>
              <td
                class="num"
              >
                4
              </td>
              <td
                class="num"
              >
                80%
              </td>
              <td
                class="num"
              >
                26,7%
              </td>
              <td />
              <td />
              <td />
              <td />
              <td />
              <td
                class="tz-recs"
                title="На этой неделе не раздувайте витрину. · Сначала довезите кольца, на звонке не обещайте новые серьги. · Если клиент просит новинки — сначала заберите залежалое."
              >
                <div
                  class="tz-recs-body tz-recs-ai rec-llm arrive"
                >
                  <span
                    class="pill rec-ai tz-rec-ai-mark"
                    title="Текст дописан моделью"
                  >
                    ИИ
                  </span>
                  <ul>
                    <li>
                      На этой неделе не раздувайте витрину.
                    </li>
                    <li>
                      Сначала довезите кольца, на звонке не обещайте новые серьги.
                    </li>
                    <li>
                      Если клиент просит новинки — сначала заберите залежалое.
                    </li>
                  </ul>
                </div>
              </td>
            </tr>
            <tr
              class="tz-total"
            >
              <td>
                Итого
              </td>
              <td
                class="num"
              >
                10
              </td>
              <td
                class="num"
              >
                34
              </td>
              <td
                class="num"
              >
                340%
              </td>
              <td
                class="num"
              >
                113,3%
              </td>
              <td>
                Итого
              </td>
              <td
                class="num"
              >
                10
              </td>
              <td
                class="num"
              >
                34
              </td>
              <td
                class="num"
              >
                340%
              </td>
              <td
                class="num"
              >
                113,3%
              </td>
              <td>
                Итого
              </td>
              <td
                class="num"
              >
                10
              </td>
              <td
                class="num"
              >
                34
              </td>
              <td
                class="num"
              >
                340%
              </td>
              <td
                class="num"
              >
                113,3%
              </td>
              <td
                class="num"
              >
                80
              </td>
              <td
                class="num"
              >
                70
              </td>
              <td
                class="num dyn-down"
              >
                −46
              </td>
              <td
                class="tz-comment tz-comment-compact"
              >
                <div
                  class="tz-comment-row"
                >
                  <p
                    class="tz-comment-text"
                  >
                    Участвует в повышенной мотивации
                  </p>
                  <span
                    class="tz-comment-actions no-print"
                  >
                    <button
                      class="tz-text-link"
                      type="button"
                    >
                      изменить
                    </button>
                    <button
                      class="tz-text-link"
                      type="button"
                    >
                      история
                    </button>
                  </span>
                </div>
              </td>
              <td
                class="num"
              >
                34
              </td>
              <td
                class="tz-recs"
                title="Верните залежалый товар."
              >
                <div
                  class="tz-recs-body"
                >
                  <ul>
                    <li>
                      Верните залежалый товар.
                    </li>
                  </ul>
                </div>
              </td>
            </tr>
            <tr
              class="tz-gap"
            >
              <td
                colspan="25"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > RecommendationCard 1`] = `
<div>
  <article
    class="panel rec-card high has-llm"
    style="animation-delay: 0ms;"
  >
    <div
      class="rec-card-head"
    >
      <div
        class="rec-card-pills"
      >
        <span
          class="pill"
        >
          Залежалый товар
        </span>
        <span
          class="pill bad"
        >
          Срочно
        </span>
        <span
          class="pill rec-action"
        >
          Вернуть
        </span>
        <span
          class="pill rec-ai"
        >
          ИИ
        </span>
      </div>
      <div
        class="rec-score"
        title="Приоритет 82"
      >
        <span>
          82
        </span>
        <i
          style="width: 82%;"
        />
      </div>
    </div>
    <div
      class="muted rec-who"
    >
      ТОО Alpha · X1
    </div>
    <h3
      class="rec-title"
    >
      Вернуть X1
    </h3>
    <p
      class="rec-message"
    >
      Вернуть или обменять артикул X1.
    </p>
    <div
      class="rec-why"
    >
      <span
        class="pill"
      >
        <strong
          class="rec-num"
        >
          7
        </strong>
         мес. без продаж
      </span>
      <span
        class="pill"
      >
        об-ть 
        <strong
          class="rec-num"
        >
          4,5%
        </strong>
      </span>
    </div>
    <div
      class="rec-llm arrive"
    >
      <div
        class="rec-llm-label"
      >
        Совет ИИ
      </div>
      Предложите обмен на ходовую связку.
    </div>
  </article>
</div>
`;

exports[`snapshots > RecommendationCard awaiting llm 1`] = `
<div>
  <article
    class="panel rec-card high awaiting-llm"
    style="animation-delay: 0ms;"
  >
    <div
      class="rec-card-head"
    >
      <div
        class="rec-card-pills"
      >
        <span
          class="pill"
        >
          Залежалый товар
        </span>
        <span
          class="pill bad"
        >
          Срочно
        </span>
        <span
          class="pill rec-action"
        >
          Вернуть
        </span>
        <span
          class="pill rec-ai is-wait"
        >
          ИИ
        </span>
      </div>
      <div
        class="rec-score"
        title="Приоритет 82"
      >
        <span>
          82
        </span>
        <i
          style="width: 82%;"
        />
      </div>
    </div>
    <div
      class="muted rec-who"
    >
      ТОО Alpha · X1
    </div>
    <h3
      class="rec-title"
    >
      Вернуть X1
    </h3>
    <p
      class="rec-message"
    >
      Вернуть или обменять артикул X1.
    </p>
    <div
      aria-hidden="true"
      class="rec-llm wait"
    >
      <div
        class="rec-llm-label"
      >
        Совет ИИ
      </div>
      <span
        class="rec-llm-ghost"
      >
        Пишу, что сказать менеджеру…
      </span>
    </div>
  </article>
</div>
`;

exports[`snapshots > RecommendationCard price articles 1`] = `
<div>
  <article
    class="panel rec-card high"
    style="animation-delay: 0ms;"
  >
    <div
      class="rec-card-head"
    >
      <div
        class="rec-card-pills"
      >
        <span
          class="pill"
        >
          Цена отгрузки
        </span>
        <span
          class="pill bad"
        >
          Срочно
        </span>
        <span
          class="pill rec-action"
        >
          Снизить цену
        </span>
      </div>
      <div
        class="rec-score"
        title="Приоритет 88"
      >
        <span>
          88
        </span>
        <i
          style="width: 88%;"
        />
      </div>
    </div>
    <div
      class="muted rec-who"
    >
      ТОО Alpha · R-1
    </div>
    <h3
      class="rec-title"
    >
      Снизить цену отгрузки · Кольцо
    </h3>
    <p
      class="rec-message"
    >
      Клиент продаёт [Кольцо] ниже отгрузки на 
      <strong
        class="rec-num"
      >
        22%
      </strong>
      .
    </p>
    <div
      class="rec-why"
    >
      <span
        class="pill"
      >
        разрыв 
        <strong
          class="rec-num"
        >
          22,5%
        </strong>
      </span>
      <span
        class="pill"
      >
        R-1
      </span>
    </div>
    <ul
      class="rec-articles"
    >
      <li>
        <strong>
          R-1
        </strong>
        <div
          class="rec-gap"
        >
          <div
            aria-hidden="true"
            class="rec-gap-track"
          >
            <i
              class="rec-gap-sale"
              style="width: 68.96551724137932%;"
            />
          </div>
          <div
            class="rec-gap-legend"
          >
            <span>
              продажа 
              <strong
                class="rec-num"
              >
                120 000
              </strong>
            </span>
            <span>
              отгрузка 
              <strong
                class="rec-num"
              >
                174 000
              </strong>
            </span>
          </div>
          <em
            class="rec-gap-delta"
          >
            −
            <strong
              class="rec-num"
            >
              31%
            </strong>
          </em>
        </div>
      </li>
    </ul>
  </article>
</div>
`;

exports[`snapshots > SettingsPage 1`] = `
<div>
  <header
    class="page-header"
  >
    <div
      class="page-header-lead"
    >
      <a
        aria-label="На главную"
        class="page-header-icon"
        href="/"
        title="На главную"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="22"
          viewBox="0 0 24 24"
          width="22"
        >
          <path
            d="M14 21C13.4477 21 13 20.5523 13 20V12C13 11.4477 13.4477 11 14 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H14ZM4 13C3.44772 13 3 12.5523 3 12V4C3 3.44772 3.44772 3 4 3H10C10.5523 3 11 3.44772 11 4V12C11 12.5523 10.5523 13 10 13H4ZM9 11V5H5V11H9ZM4 21C3.44772 21 3 20.5523 3 20V16C3 15.4477 3.44772 15 4 15H10C10.5523 15 11 15.4477 11 16V20C11 20.5523 10.5523 21 10 21H4ZM5 19H9V17H5V19ZM15 19H19V13H15V19ZM13 4C13 3.44772 13.4477 3 14 3H20C20.5523 3 21 3.44772 21 4V8C21 8.55228 20.5523 9 20 9H14C13.4477 9 13 8.55228 13 8V4ZM15 5V7H19V5H15Z"
          />
        </svg>
      </a>
      <div>
        <h1>
          Настройки
        </h1>
        <p
          class="muted"
        >
          Цветовая схема только для этого браузера. На отчёты и данные не влияет.
        </p>
      </div>
    </div>
    <div
      class="page-header-end"
    >
      <div
        class="header-tools"
      >
        <a
          class="assistant-launch"
          href="/assistant"
          title="Ассистент"
        >
          <span
            aria-hidden="true"
            class="assistant-launch-orb ai-brief-orb live"
          >
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-ring"
            />
            <span
              class="ai-brief-spark"
            />
            <span
              class="ai-brief-core"
            />
          </span>
          <span
            class="assistant-launch-label"
          >
            Ассистент
          </span>
        </a>
      </div>
    </div>
  </header>
  <div
    class="panel"
  >
    <h2>
      Оформление
    </h2>
    <p
      class="muted"
    >
      Выберите схему. Изменение применяется сразу.
    </p>
    <div
      class="theme-grid"
    >
      <button
        aria-pressed="true"
        class="theme-card active"
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(238, 242, 246);"
          />
          <span
            style="background: rgb(13, 148, 136);"
          />
          <span
            style="background: rgb(17, 24, 39);"
          />
        </div>
        <strong>
          Изумруд
        </strong>
        <span
          class="muted"
        >
          Светлая бирюза
        </span>
        <span
          class="pill ok"
        >
          Выбрана
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(247, 241, 232);"
          />
          <span
            style="background: rgb(180, 83, 9);"
          />
          <span
            style="background: rgb(28, 25, 23);"
          />
        </div>
        <strong>
          Янтарь
        </strong>
        <span
          class="muted"
        >
          Тёплый золотой
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(238, 240, 247);"
          />
          <span
            style="background: rgb(79, 70, 229);"
          />
          <span
            style="background: rgb(17, 24, 39);"
          />
        </div>
        <strong>
          Индиго
        </strong>
        <span
          class="muted"
        >
          Холодный синий
        </span>
      </button>
      <button
        aria-pressed="false"
        class="theme-card "
        type="button"
      >
        <div
          aria-hidden="true"
          class="theme-preview"
        >
          <span
            style="background: rgb(15, 20, 26);"
          />
          <span
            style="background: rgb(45, 212, 191);"
          />
          <span
            style="background: rgb(229, 231, 235);"
          />
        </div>
        <strong>
          Тёмная
        </strong>
        <span
          class="muted"
        >
          Тёмный фон
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshots > SourceSelect 1`] = `
<div>
  <div
    class="ui-select"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="ui-select-trigger"
      type="button"
    >
      <span>
        Все
      </span>
      <span
        class="chev"
      >
        ▾
      </span>
    </button>
  </div>
</div>
`;

exports[`snapshots > SyncProgress queued unknown total 1`] = `
<div>
  <div
    class="sync-progress is-queued"
  >
    <div
      aria-label="в очереди"
      aria-valuemax="100"
      aria-valuemin="0"
      class="sync-progress-track is-indeterminate"
      role="progressbar"
    >
      <span
        class="sync-progress-expected"
      />
      <span
        class="sync-progress-done"
        style="width: 35%;"
      />
    </div>
    <div
      class="sync-progress-meta"
    >
      <span
        class="sync-chip is-queued"
      >
        в очереди
      </span>
      <span
        class="sync-progress-count"
      >
        0 записей
      </span>
    </div>
  </div>
</div>
`;

exports[`snapshots > SyncProgress running 1`] = `
<div>
  <div
    class="sync-progress is-running"
  >
    <div
      aria-label="выполняется"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="sync-progress-track"
      role="progressbar"
    >
      <span
        class="sync-progress-expected"
      />
      <span
        class="sync-progress-done"
        style="width: 25%;"
      />
    </div>
    <div
      class="sync-progress-meta"
    >
      <span
        class="sync-chip is-running"
      >
        выполняется
      </span>
      <span
        class="sync-progress-count"
      >
        250 / 1 000 документов · 25%
      </span>
    </div>
  </div>
</div>
`;

exports[`snapshots > TableSkeleton 1`] = `
<div>
  <div
    class="table-wrap"
  >
    <table
      class="data-table"
    >
      <tbody>
        <tr
          class="table-skeleton-row"
        >
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
        </tr>
        <tr
          class="table-skeleton-row"
        >
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
          <td>
            <span
              class="skel"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`snapshots > UploadErrorsModal 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="Ошибки загрузки"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            Ошибки загрузки
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Обработано 10, ошибок 1
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="table-wrap upload-errors-table"
      >
        <table>
          <thead>
            <tr>
              <th>
                Строка
              </th>
              <th>
                Поле
              </th>
              <th>
                Ошибка
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                4
              </td>
              <td>
                article
              </td>
              <td>
                Нет в справочнике
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > UploadFileModal 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="template_sales.xlsx"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            template_sales.xlsx
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Продажи · Успех
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="toolbar"
        style="margin: 0px 0px 12px;"
      >
        <button
          class="btn secondary sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="btn-icon excel-icon"
            height="14"
            viewBox="0 0 32 32"
            width="14"
          >
            <path
              d="M28.781 4.405h-10.13V2.018L2 4.588v22.527l16.651 2.868v-3.538h10.13A1.16 1.16 0 0 0 30 25.349V5.5a1.16 1.16 0 0 0-1.219-1.095m.16 21.126H18.617l-.017-1.889h2.487v-2.2h-2.506l-.012-1.3h2.518v-2.2H18.55l-.012-1.3h2.549v-2.2H18.53v-1.3h2.557v-2.2H18.53v-1.3h2.557v-2.2H18.53v-2h10.411Z"
              fill="#20744a"
              fill-rule="evenodd"
            />
            <path
              d="M22.487 7.439h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323z"
              fill="#20744a"
            />
            <path
              d="m6.347 10.673 2.146-.123 1.349 3.709 1.594-3.862 2.146-.123-2.606 5.266 2.606 5.279-2.269-.153-1.532-4.024-1.533 3.871-2.085-.184 2.422-4.663z"
              fill="#fff"
              fill-rule="evenodd"
            />
          </svg>
          Скачать файл
        </button>
      </div>
      <p
        class="muted"
        style="margin: 0px 0px 8px;"
      >
        Строк: 1
      </p>
      <div
        class="table-wrap upload-file-preview"
      >
        <table>
          <thead>
            <tr>
              <th>
                Головной контрагент
              </th>
              <th>
                Артикул
              </th>
              <th>
                Количество
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                ИП Garant.S
              </td>
              <td>
                IM-001
              </td>
              <td>
                2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots > UploadFileModal errors tab 1`] = `
<div>
  <div
    class="modal-backdrop"
    role="presentation"
  >
    <div
      aria-label="sales.xlsx"
      aria-modal="true"
      class="modal-card wide"
      role="dialog"
    >
      <div
        class="modal-head"
      >
        <div>
          <h2>
            sales.xlsx
          </h2>
          <p
            class="muted"
            style="margin: 6px 0px 0px;"
          >
            Продажи · Частично
          </p>
        </div>
        <button
          class="btn secondary sm"
          type="button"
        >
          Закрыть
        </button>
      </div>
      <div
        class="toolbar"
        style="margin: 0px 0px 12px;"
      >
        <button
          class="btn secondary sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="btn-icon excel-icon"
            height="14"
            viewBox="0 0 32 32"
            width="14"
          >
            <path
              d="M28.781 4.405h-10.13V2.018L2 4.588v22.527l16.651 2.868v-3.538h10.13A1.16 1.16 0 0 0 30 25.349V5.5a1.16 1.16 0 0 0-1.219-1.095m.16 21.126H18.617l-.017-1.889h2.487v-2.2h-2.506l-.012-1.3h2.518v-2.2H18.55l-.012-1.3h2.549v-2.2H18.53v-1.3h2.557v-2.2H18.53v-1.3h2.557v-2.2H18.53v-2h10.411Z"
              fill="#20744a"
              fill-rule="evenodd"
            />
            <path
              d="M22.487 7.439h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323zm0 3.501h4.323v2.2h-4.323z"
              fill="#20744a"
            />
            <path
              d="m6.347 10.673 2.146-.123 1.349 3.709 1.594-3.862 2.146-.123-2.606 5.266 2.606 5.279-2.269-.153-1.532-4.024-1.533 3.871-2.085-.184 2.422-4.663z"
              fill="#fff"
              fill-rule="evenodd"
            />
          </svg>
          Скачать файл
        </button>
      </div>
      <div
        aria-label="Просмотр загрузки"
        class="seg-tabs"
        role="tablist"
        style="margin-bottom: 12px;"
      >
        <button
          aria-selected="false"
          class="seg-tab "
          role="tab"
          type="button"
        >
          Документ
        </button>
        <button
          aria-selected="true"
          class="seg-tab active"
          role="tab"
          type="button"
        >
          Ошибки (
          1
          )
        </button>
      </div>
      <div
        class="table-wrap upload-file-preview upload-errors-table"
      >
        <table>
          <thead>
            <tr>
              <th>
                Строка
              </th>
              <th>
                Поле
              </th>
              <th>
                Ошибка
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="num"
              >
                4
              </td>
              <td>
                article
              </td>
              <td>
                Нет в справочнике
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
